make sure the border doesnt create an overflow

--- a/src/panel/css/modern.css
+++ b/src/panel/css/modern.css
@@ -1,7 +1,3 @@
-body {
-  overflow: hidden;
-}
-
 .container table:first-child {
   display: none;
 }
